# fuel-watcher

./: .env.example  .gitignore  CLAUDE.md  README.md  SESSION.md  pyproject.toml  requirements.txt  run_scraper.py  run_scraper.sh  scrape.py  scrape.sh
.claude/: spec.template.md  teams.json
.claude/agents/: arch-reviewer.md  bizops.md  blockchain.md  brand-strategist.md  build-engineer.md  chaos.md  compliance.md  content-engine.md  context-manager.md  copywriter.md  customer-success.md  data-analyst.md  data-engineer.md  data-researcher.md  data-scientist.md  db-optimiser.md  dependency-manager.md  desktop.md  dx-optimiser.md  email-lifecycle.md  error-coordinator.md  error-detective.md  fintech.md  gamedev.md  git-workflow.md  go.md  graphic-designer.md  graphql.md  growth.md  java.md  knowledge-synthesiser.md  kubernetes.md  launch.md  leadgen.md  legacy-moderniser.md  market-researcher.md  marketing-creative.md  media-buyer.md  microservices.md  mlops.md  (+18 more)
.claude/commands/: business-map.md  launch-plan.md  lead-magnet.md  loop-build.md  offer-audit.md  plan.md  session-end.md  session-start.md  verify.md
.claude/skills/: extract-skill.md  insights.md  sync.md
api/: index.py
public/: index.html
scrape/: common.py  render.py
scrape/sources/: fuelsnoop.py  petrolspy.py
src/fuel_watcher/: __init__.py  api.py  cli.py  display.py
